--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "axios": "^1.3.4",
     "firebase": "^9.17.2",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
